ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui-service
  type: NodePort
  ports:
  - port: 80
    targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
      - name: ui-service
        image: gcr.io/smart-car-insurance-hybrid/ui-service:latest
        ports:
        - containerPort: 9001
