ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ui-service
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: api-gateway
              servicePort: 80
